Sửa lại layout footer

--- a/Duan1Nhom4/assets/css/home_fe.css
+++ b/Duan1Nhom4/assets/css/home_fe.css
@@ -536,10 +536,10 @@ h1 {
     width: auto;
 }
 .rating-items {
-    /* display: flex;
+    display: flex;
     justify-content: space-around;
     align-items: center;
-    gap: 3em; */
+    gap: 3em;
 }
 
 .bottom-div {
