update số lượng

--- a/Duan1Nhom4/assets/css/gio_hangs.css
+++ b/Duan1Nhom4/assets/css/gio_hangs.css
@@ -99,7 +99,7 @@
     color: #333;
 }
 
-.cart-item {
+.cart-list-items {
     border-radius: 12px;
     border: 1px solid #f0f0f0;
     padding: 20px;
@@ -107,9 +107,9 @@
     transition: box-shadow 0.3s ease;
 }
 
-.cart-item:hover {
+/* .cart-item:hover {
     box-shadow: 0 2px 12px rgba(0,0,0,0.05);
-}
+} */
 
 .item-top {
     display: flex;
