--- a/Duan1Nhom4/assets/css/product.css
+++ b/Duan1Nhom4/assets/css/product.css
@@ -390,10 +390,10 @@
 }
 
 .rating-items {
-    /* display: flex;
+    display: flex;
     justify-content: space-around;
     align-items: center;
-    gap: 3em; */
+    gap: 3em;
 }
 
 .bottom-div {
